Fix overflow x

--- a/app/static/less/components.perks.less
+++ b/app/static/less/components.perks.less
@@ -88,6 +88,7 @@
 .perks-modal-desc {
 	height: 330px; 
 	overflow-y: auto;
+	word-wrap: break-word;
 }
 
 .perks-modal-edit-btn {
